[package]
name = "ascii_displayer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
gif = "0.12.0"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
